--- a/src/api/GalleryPixels.Api/GalleryPixels.Api.csproj
+++ b/src/api/GalleryPixels.Api/GalleryPixels.Api.csproj
@@ -8,14 +8,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Content Include="..\..\.dockerignore">
-        <Link>.dockerignore</Link>
-      </Content>
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\GalleryPixels.Application\GalleryPixels.Application.csproj" />
-      <ProjectReference Include="..\GalleryPixels.Infrastructure\GalleryPixels.Infrastructure.csproj" />
+      <Content Include="..\..\..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
     </ItemGroup>
 
 </Project>
