--- a/src/client/GalleryPixels.UI.Application/GalleryPixels.UI.Application.csproj
+++ b/src/client/GalleryPixels.UI.Application/GalleryPixels.UI.Application.csproj
@@ -6,9 +6,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
-
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\GalleryPixels.UI.Domain\GalleryPixels.UI.Domain.csproj" />
     </ItemGroup>
 
 </Project>
