--- a/src/client/GalleryPixels.UI/GalleryPixels.UI.csproj
+++ b/src/client/GalleryPixels.UI/GalleryPixels.UI.csproj
@@ -5,6 +5,8 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <BlazorEnableTimeZoneSupport>false</BlazorEnableTimeZoneSupport>
+        <BlazorWebAssemblyPreserveCollationData>false</BlazorWebAssemblyPreserveCollationData>
     </PropertyGroup>
 
     <ItemGroup>
