--- a/src/client/GalleryPixels.UI/GalleryPixels.UI.csproj
+++ b/src/client/GalleryPixels.UI/GalleryPixels.UI.csproj
@@ -16,6 +16,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="BlazorPro.BlazorSize" Version="6.2.2" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.11"/>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.11" PrivateAssets="all"/>
     </ItemGroup>
