Added Serilog & MongoDB connection

--- a/src/api/GalleryPixels.Api/appsettings.Development.json
+++ b/src/api/GalleryPixels.Api/appsettings.Development.json
@@ -4,5 +4,17 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Mongodb": {
+    "Host": "128.140.87.126",
+    "Port": "27017",
+    "AuthDatabase": "gallerypixels",
+    "Database": "alpha-gallerypixels"
+  },
+  "S3": {
+    "AccessKey": "xxxxxxxx",
+    "EndpointUrl": "https://ece0f0f941807196e9e5b353d377ce0f.r2.cloudflarestorage.com",
+    "BucketName": "cdn-alpha-gallerypixels",
+    "PublicUrl": "https://cdn.alpha.gallerypixels.com/"
   }
 }
