--- a/src/api/GalleryPixels.Api/appsettings.json
+++ b/src/api/GalleryPixels.Api/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Mongodb": {
+    "Host": "128.140.87.126",
+    "Port": "27017",
+    "AuthDatabase": "gallerypixels",
+    "Database": "gallerypixels"
+  },
+  "S3": {
+    "AccessKey": "xxxxxxxx",
+    "EndpointUrl": "https://ece0f0f941807196e9e5b353d377ce0f.r2.cloudflarestorage.com",
+    "BucketName": "cdn-gallerypixels",
+    "PublicUrl": "https://cdn.gallerypixels.com/"
+  }
 }
