--- a/src/api/GalleryPixels.Api.Application/GalleryPixels.Api.Application.csproj
+++ b/src/api/GalleryPixels.Api.Application/GalleryPixels.Api.Application.csproj
@@ -16,11 +16,14 @@
         </PackageReference>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1"/>
+        <PackageReference Include="MongoDB.Bson" Version="2.21.0" />
+        <PackageReference Include="Scrutor" Version="4.2.2" />
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\GalleryPixels.Api.Domain\GalleryPixels.Api.Domain.csproj"/>
     </ItemGroup>
+
 
 
 </Project>
