--- a/src/api/GalleryPixels.Api.Domain/GalleryPixels.Api.Domain.csproj
+++ b/src/api/GalleryPixels.Api.Domain/GalleryPixels.Api.Domain.csproj
@@ -8,7 +8,11 @@
 
     <ItemGroup>
         <PackageReference Include="FluentValidation" Version="11.7.1"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0"/>
     </ItemGroup>
+
+
+
 
 </Project>
