--- a/src/api/GalleryPixels.Api.Infrastructure/GalleryPixels.Api.Infrastructure.csproj
+++ b/src/api/GalleryPixels.Api.Infrastructure/GalleryPixels.Api.Infrastructure.csproj
@@ -7,11 +7,17 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MongoDB.Driver" Version="2.21.0" />
+        <PackageReference Include="Serilog.Sinks.Mongodb.TimeSeries" Version="4.0.3" />
+    </ItemGroup>
+    
+    <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0"/>
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\GalleryPixels.Api.Application\GalleryPixels.Api.Application.csproj"/>
     </ItemGroup>
+
 
 </Project>
