--- a/src/client/GalleryPixels.UI/package.json
+++ b/src/client/GalleryPixels.UI/package.json
@@ -4,10 +4,10 @@
     "minifycss": "minify ./Styles/temp.site.min.css > ./wwwroot/css/site.min.css"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.15",
+    "@tailwindcss/postcss": "^4.0.13",
+    "minify": "^10.5.2",
     "postcss": "^8.4.29",
     "postcss-cli": "^10.1.0",
-    "tailwindcss": "^3.4.17",
-    "minify": "^10.5.2"
+    "tailwindcss": "^4.0.13"
   }
 }
