--- a/src/api/GalleryPixels.Api.Domain/GalleryPixels.Api.Domain.csproj
+++ b/src/api/GalleryPixels.Api.Domain/GalleryPixels.Api.Domain.csproj
@@ -12,6 +12,10 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Entities\" />
+    </ItemGroup>
+
 
 
 
