--- a/src/api/GalleryPixels.Api.Infrastructure/GalleryPixels.Api.Infrastructure.csproj
+++ b/src/api/GalleryPixels.Api.Infrastructure/GalleryPixels.Api.Infrastructure.csproj
@@ -5,11 +5,6 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
-
-    <ItemGroup>
-        <PackageReference Include="MongoDB.Driver" Version="3.2.1" />
-        <PackageReference Include="Serilog.Sinks.Mongodb.TimeSeries" Version="5.0.12" />
-    </ItemGroup>
     
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
@@ -17,6 +12,10 @@
 
     <ItemGroup>
         <ProjectReference Include="..\GalleryPixels.Api.Application\GalleryPixels.Api.Application.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Persistence\" />
     </ItemGroup>
 
 
