--- a/src/api/GalleryPixels.Api.Infrastructure/GalleryPixels.Api.Infrastructure.csproj
+++ b/src/api/GalleryPixels.Api.Infrastructure/GalleryPixels.Api.Infrastructure.csproj
@@ -7,15 +7,17 @@
     </PropertyGroup>
     
     <ItemGroup>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.3">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\GalleryPixels.Api.Application\GalleryPixels.Api.Application.csproj"/>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Persistence\" />
     </ItemGroup>
 
 
