--- a/src/api/GalleryPixels.Api/appsettings.TEMPLATE.json
+++ b/src/api/GalleryPixels.Api/appsettings.TEMPLATE.json
@@ -11,5 +11,13 @@
     "EndpointUrl": "https:/example.r2.cloudflarestorage.com",
     "BucketName": "cdn-example",
     "PublicUrl": "https://cdn.example.com/"
+  },
+  "ConnectionStrings": {
+    "Postgres": "Host=localhost;Port=5432;Database=gallerypixels;Username=USERNAME;Password=PASSWORD"
+  },
+  "Jwt": {
+    "ValidIssuer": "ISSUER",
+    "ValidAudience": "AUDIENCE",
+    "Key": "SECRET_KEY"
   }
 }
