--- a/.gitignore
+++ b/.gitignore
@@ -246,3 +246,5 @@ update.bat
 src/api/GalleryPixels.Api/appsettings.Development.json
 
 src/api/GalleryPixels.Api/appsettings.json
+
+src/client/GalleryPixels.UI/wwwroot/appsettings.Development.json
