--- a/src/client/GalleryPixels.UI.Infrastructure/GalleryPixels.UI.Infrastructure.csproj
+++ b/src/client/GalleryPixels.UI.Infrastructure/GalleryPixels.UI.Infrastructure.csproj
@@ -8,6 +8,8 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.3" />
+        <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     </ItemGroup>
 
     <ItemGroup>
