--- a/src/client/GalleryPixels.UI/GalleryPixels.UI.csproj
+++ b/src/client/GalleryPixels.UI/GalleryPixels.UI.csproj
@@ -24,9 +24,15 @@
     <ItemGroup>
         <ProjectReference Include="..\GalleryPixels.UI.Application\GalleryPixels.UI.Application.csproj"/>
         <ProjectReference Include="..\GalleryPixels.UI.Infrastructure\GalleryPixels.UI.Infrastructure.csproj"/>
-
-
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Update="wwwroot\appsettings.Development.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+      <Content Update="wwwroot\appsettings.TEMPLATE.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
 
 </Project>
