--- a/src/client/GalleryPixels.UI/GalleryPixels.UI.csproj
+++ b/src/client/GalleryPixels.UI/GalleryPixels.UI.csproj
@@ -28,5 +28,12 @@
 
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Include="..\..\..\.dockerignore">
+        <Link>.dockerignore</Link>
+        <DependentUpon>Dockerfile</DependentUpon>
+      </Content>
+    </ItemGroup>
+
 
 </Project>
