Implemented client side login and authentication requirement handling

--- a/src/client/GalleryPixels.UI/GalleryPixels.UI.csproj
+++ b/src/client/GalleryPixels.UI/GalleryPixels.UI.csproj
@@ -33,6 +33,9 @@
       <Content Update="wwwroot\appsettings.TEMPLATE.json">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
+      <Content Update="wwwroot\appsettings.Development.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
     <ItemGroup>
