--- a/src/client/GalleryPixels.UI.Application/GalleryPixels.UI.Application.csproj
+++ b/src/client/GalleryPixels.UI.Application/GalleryPixels.UI.Application.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\..\GalleryPixels.Domain\GalleryPixels.Domain.csproj" />
         <ProjectReference Include="..\GalleryPixels.UI.Domain\GalleryPixels.UI.Domain.csproj" />
     </ItemGroup>
 
