--- a/src/client/GalleryPixels.UI.Domain/GalleryPixels.UI.Domain.csproj
+++ b/src/client/GalleryPixels.UI.Domain/GalleryPixels.UI.Domain.csproj
@@ -11,5 +11,9 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\GalleryPixels.Domain\GalleryPixels.Domain.csproj" />
+    </ItemGroup>
+
 
 </Project>
