--- a/src/client/GalleryPixels.UI/wwwroot/appsettings.TEMPLATE.json
+++ b/src/client/GalleryPixels.UI/wwwroot/appsettings.TEMPLATE.json
@@ -1,10 +1,10 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Information"
     }
   },
   "Api": {
-    "Url": "http://localhost:5000/api"
+    "Url": "http://localhost:5000/api/"
   }
 }
