--- a/src/client/GalleryPixels.UI.Infrastructure/GalleryPixels.UI.Infrastructure.csproj
+++ b/src/client/GalleryPixels.UI.Infrastructure/GalleryPixels.UI.Infrastructure.csproj
@@ -7,9 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
-        <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.3" />
-        <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3"/>
+        <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.3"/>
+        <PackageReference Include="Blazored.LocalStorage" Version="4.5.0"/>
+        <PackageReference Include="Microsoft.JSInterop" Version="9.0.3"/>
     </ItemGroup>
 
     <ItemGroup>
