--- a/src/client/GalleryPixels.UI/Dockerfile
+++ b/src/client/GalleryPixels.UI/Dockerfile
@@ -26,14 +26,14 @@ RUN dotnet publish "/src/client/GalleryPixels.UI/GalleryPixels.UI.csproj" \
 # Serve wwwroot with nginx
 FROM nginx:alpine AS final
 
-WORKDIR /usr/share/nginx/html
+WORKDIR /app
 COPY --from=base /app/publish/wwwroot .
 
 # Create and copy Nginx config
 RUN echo 'server { \
     listen 80; \
     server_name localhost; \
-    root /usr/share/nginx/html; \
+    root /app; \
     index index.html; \
     location / { \
         try_files $uri $uri/ /index.html; \
@@ -44,7 +44,7 @@ RUN echo 'server { \
     } \
 }' > /etc/nginx/conf.d/default.conf
 
-RUN chmod -R 755 /usr/share/nginx/html
+RUN chmod -R 755 /app
 
 EXPOSE 80
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
