Fix: Incorrect project references

--- a/src/api/GalleryPixels.Api.Application/GalleryPixels.Api.Application.csproj
+++ b/src/api/GalleryPixels.Api.Application/GalleryPixels.Api.Application.csproj
@@ -22,7 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\GalleryPixels.Domain\GalleryPixels.Domain.csproj" />
+        <ProjectReference Include="..\..\GalleryPixels.Domain\GalleryPixels.Domain.csproj" />
         <ProjectReference Include="..\GalleryPixels.Api.Domain\GalleryPixels.Api.Domain.csproj" />
     </ItemGroup>
 
