Fix: Appsettings not being set correctly.

--- a/.gitignore
+++ b/.gitignore
@@ -248,3 +248,7 @@ src/api/GalleryPixels.Api/appsettings.Development.json
 src/api/GalleryPixels.Api/appsettings.json
 
 src/client/GalleryPixels.UI/wwwroot/appsettings.Development.json
+
+appsettings.api.json
+
+appsettings.ui.json
