--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,8 +10,10 @@ services:
       - "8080:8080"
     environment:
       ASPNETCORE_ENVIRONMENT: Production
+    depends_on:
+      - gallerypixels_pg
     volumes:
-      - ./api-appsettings.json:/app/appsettings.json
+      - ./appsettings.api.json:/app/appsettings.json
 
   gallerypixels_ui:
     image: ghcr.io/brammys/gallerypixels.ui:latest
@@ -22,7 +24,7 @@ services:
     environment:
       ASPNETCORE_ENVIRONMENT: Production
     volumes:
-      - ./ui-appsettings.json:/app/appsettings.json
+      - ./appsettings.ui.json:/app/appsettings.json
 
   gallerypixels_pg:
     image: postgres
