Added cors policy

--- a/src/api/GalleryPixels.Api/appsettings.TEMPLATE.json
+++ b/src/api/GalleryPixels.Api/appsettings.TEMPLATE.json
@@ -5,7 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
+  "CorsOrigins": [
+    "http://localhost:5000"
+  ],
   "S3": {
     "AccessKey": "xxxxxxxx",
     "EndpointUrl": "https:/example.r2.cloudflarestorage.com",
