feat: Initialize an initial user during startup

--- a/src/api/GalleryPixels.Api/appsettings.TEMPLATE.json
+++ b/src/api/GalleryPixels.Api/appsettings.TEMPLATE.json
@@ -8,6 +8,11 @@
   "CorsOrigins": [
     "http://localhost:5000"
   ],
+  "InitialUserSettings": {
+    "Username": "admin",
+    "Email": "example@example.com",
+    "Password": "Admin123!"
+  },
   "S3": {
     "AccessKey": "xxxxxxxx",
     "EndpointUrl": "https:/example.r2.cloudflarestorage.com",
