--- a/src/api/GalleryPixels.Api.Infrastructure/GalleryPixels.Api.Infrastructure.csproj
+++ b/src/api/GalleryPixels.Api.Infrastructure/GalleryPixels.Api.Infrastructure.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.3" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.3" />
+        <PackageReference Include="Scrutor" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
