--- a/.gitignore
+++ b/.gitignore
@@ -243,12 +243,10 @@ _Pvt_Extensions
 /NDependOut
 /CleanArchitecture.ndproj
 update.bat
-src/api/GalleryPixels.Api/appsettings.Development.json
 
-src/api/GalleryPixels.Api/appsettings.json
+# Appsettings files
+appsettings.Development.json
+appsettings.json
 
-src/client/GalleryPixels.UI/wwwroot/appsettings.Development.json
-
-appsettings.api.json
-
-appsettings.ui.json
+# Logs dir
+logs/
